# home-irrigation-service

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/app/: config.py  dependencies.py  main.py  models.py
backend/src/app/api/: routes_config.py  routes_control.py  routes_schedule.py  routes_status.py
backend/src/app/database/: engine.py  models.py  repository.py
backend/src/app/hardware/: sensors.py  valve.py
backend/src/app/services/: controller.py  repository.py
backend/src/client/: cli.py
backend/tests/: test_calibration.py  test_controller.py
client/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
client/messages/: en.json  ru.json
client/src/: middleware.ts
client/src/app/[locale]/: layout.tsx  page.tsx
client/src/components/: ControlPanel.tsx  LanguageSwitcher.tsx  MetricsCard.tsx  ScheduleList.tsx  ThresholdConfig.tsx
client/src/i18n/: request.ts  routing.ts
client/src/lib/: api.ts
